[package]
name = "origin-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
ecb = { version = "0.1.2", features = ["alloc"] }
hex = "0.4.3"
quick-xml = { version = "0.38.3", features = ["serialize"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"

[dev-dependencies]
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
