[package]
name = "origin-sdk"
version = "0.1.2"
edition = "2021"
description = "A Rust implementation of the Origin SDK, which is used in games to communicate with the EA Desktop client."
repository = "https://github.com/ploxxxy/origin-sdk"
authors = ["ploxxxy"]
license = "MIT"
readme = "README.md"
keywords = ["lsx", "electronic-arts", "ea", "origin"]
categories = ["games"]

[[example]]
name = "client"
required-features = ["client"]

[features]
default = []
client = []

[dependencies]
aes = "0.8.4"
ecb = { version = "0.1.2", features = ["alloc"] }
hex = "0.4.3"
quick-xml = { version = "0.38.3", features = ["serialize"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = [
  "net",
  "rt-multi-thread",
  "io-util",
  "sync",
  "time",
  "macros",
  "signal",
] }
tracing = "0.1.41"

[dev-dependencies]
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
